Fix FSE scrollbar for 6.6.5

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -565,9 +565,7 @@ html[dir='rtl'] {
 /**
 * Hide scrollbar in iframe editor #3574
 */
-body[maxi-blocks-responsive='m'],
-body[maxi-blocks-responsive='s'],
-body[maxi-blocks-responsive='xs'] {
+body[maxi-blocks-responsive]:not(.branch-6-6) {
 	&::-webkit-scrollbar {
 		width: 0;
 	}
