--- a/src/css/maxi-themes-banner.scss
+++ b/src/css/maxi-themes-banner.scss
@@ -177,15 +177,3 @@ html[dir='rtl'] {
 		direction: ltr;
 	}
 }
-
-/*******************************
-* Fix WordPress 6.6 scroll and appenders issue
-*******************************/
-
-// body.maxi-blocks--active {
-// 	.editor-visual-editor {
-// 		> .components-resizable-box__container.editor-resizable-editor {
-// 			height: auto !important;
-// 		}
-// 	}
-// }
